src/test/deca/context/valid/SansObjet/DeclVar-Minus-int-int-int.deca
// Description:
//    Declaration of a int variable using - operation between a int variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  5; 
    int y = 2; 
    int z = 5 - 2; 
}
